--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pin",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "uglify-js": "git://github.com/mishoo/UglifyJS2#harmony"
 }
